// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can add platform to video game 1`] = `
Object {
  "updateVideoGame": Object {
    "__typename": "VideoGame",
    "platforms": Array [
      Object {
        "__typename": "VideoGamePlatform",
        "id": "Playstation4",
        "name": "Playstation 4",
      },
    ],
  },
}
`;

exports[`can add a video game 1`] = `
Object {
  "addVideoGame": Object {
    "__typename": "VideoGame",
    "externalId": null,
    "id": Any<String>,
    "image": null,
    "notes": null,
    "platforms": Array [
      Object {
        "__typename": "VideoGamePlatform",
        "name": "Nintendo 3DS",
      },
    ],
    "rating": 1,
    "title": "Test Video Game",
  },
}
`;

exports[`can fetch second page of video games 1`] = `
Object {
  "videoGames": Object {
    "__typename": "VideoGamePage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "VideoGame",
        "title": "Ori and the Will of the Wisps: Collector's Edition",
      },
    ],
    "nextPageCursor": Any<String>,
  },
}
`;

exports[`can fetch second page of video games 2`] = `
Object {
  "videoGames": Object {
    "__typename": "VideoGamePage",
    "hasNextPage": false,
    "items": Array [
      Object {
        "__typename": "VideoGame",
        "title": "Test Video Game",
      },
    ],
    "nextPageCursor": null,
  },
}
`;

exports[`can fetch video games by shelf 1`] = `
Object {
  "videoGameShelf": Object {
    "__typename": "VideoGameShelf",
    "items": Object {
      "__typename": "VideoGamePage",
      "items": Array [
        Object {
          "__typename": "VideoGame",
          "title": "Ori and the Will of the Wisps: Collector's Edition",
        },
      ],
    },
    "name": "Completed",
  },
}
`;

exports[`can import external video game 1`] = `
Object {
  "importExternalVideoGame": Object {
    "__typename": "VideoGame",
    "id": Any<String>,
    "shelf": Object {
      "__typename": "VideoGameShelf",
      "id": "Completed",
    },
    "title": "Ori and the Will of the Wisps: Collector's Edition",
  },
}
`;

exports[`can move video game between shelves 1`] = `
Object {
  "updateVideoGame": Object {
    "__typename": "VideoGame",
    "shelf": Object {
      "__typename": "VideoGameShelf",
      "id": "Played",
      "name": "Played",
    },
  },
}
`;

exports[`can query single video game 1`] = `
Object {
  "videoGame": Object {
    "__typename": "VideoGame",
    "id": Any<String>,
    "platforms": Array [
      Object {
        "__typename": "VideoGamePlatform",
        "id": "Nintendo3DS",
        "name": "Nintendo 3DS",
      },
    ],
    "rating": 1,
    "shelf": Object {
      "__typename": "VideoGameShelf",
      "id": "GaveUp",
      "name": "Gave Up",
    },
    "title": "Test Video Game",
  },
}
`;

exports[`can search external video games 1`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 2`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 3`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 4`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 5`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 6`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 7`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 8`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 9`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 10`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;
